--- a/.github/workflows/pipelines.yaml
+++ b/.github/workflows/pipelines.yaml
@@ -5,7 +5,7 @@ on:
     branches:
     - "main"
   pull_request:
-  workflow_dispatch:
+  workflow_run:
     
 permissions:
   contents: read
@@ -30,18 +30,44 @@ jobs:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
     - name: Terraform Init
+      id: init
       run: terraform init
     
     - name: Terraform validate
+      id: validate
       run: terraform validate
 
     - name: Terraform Format
+      id: fmt
       run: terraform fmt -recursive -check -diff
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
+      id: plan
       run: terraform plan -input=false
 
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: terraform apply
+
+    - name: Write outputs
+      env:
+        PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
+      run: |
+        OUTPUT=$(cat << EOF
+        #### Terraform Format and Style 🖌 ${{ steps.fmt.outcome }}
+        #### Terraform Initialization ⚙️ ${{ steps.init.outcome }} 
+        #### Terraform Plan 📖 ${{ steps.plan.outcome }}\
+        #### Terraform Validation 🤖 ${{ steps.validate.outcome }}
+
+        <details><summary>Show Plan</summary>
+
+        ${process.env.PLAN}
+
+        </details>
+
+        *Pushed by: @${{ github.actor }}, Action: ${{ github.event_name }}*
+        EOF
+        )
+
+        echo $OUTPUT >> $GITHUB_STEP_SUMMARY
